Fix margin inconsistency in character pages, update troubleshooting and manifest files

--- a/html/feren-dax.html
+++ b/html/feren-dax.html
@@ -6,60 +6,84 @@
   <title>Feren Dax</title>
   <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
-  <header>
-    <h1>Feren Dax</h1>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="characters.html">Characters</a></li>
-        <li><a href="important-npcs.html">Important NPCs</a></li>
-        <li><a href="locations.html">Locations</a></li>
-        <li><a href="lore-books.html">Lore Books</a></li>
-        <li><a href="house-rules.html">House Rules</a></li>
-        <li><a href="organizations.html">Organizations</a></li>
-        <li><a href="session-notes.html">Session Notes</a></li>
+<body style="min-height: 100vh; display: flex; flex-direction: column; background: url('../assets/images/CoverArt.png') no-repeat center 131px fixed; background-size: 100% 100%; background-repeat: no-repeat; background-color: #f8f8f8; margin: 0; padding: 0;">
+  <!-- ================= BEGIN HEADER ================= -->
+  <header
+    style="
+      text-align: center;
+      background: rgb(0, 0, 0);
+      border-radius: 0 0 0px 0px;
+      box-shadow: 0 2px 8px rgba(255, 255, 255, 0);
+      width: 100vw;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      padding: 1rem 2rem;
+      z-index: 100;
+    "
+  >
+    <h1 style="color: #FFD700; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Feren Dax</h1>
+    <nav style="text-align: center; width: 100%;">
+      <ul style="
+        display: inline-block;
+        float: none;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+      ">
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="../index.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Home</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="characters.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Characters</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="important-npcs.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Important NPCs</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="locations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Locations</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="lore-books.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Lore Books</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="house-rules.html" style="color: #b22222; font-weight: bold; text-decoration: none;">House Rules</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="organizations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Organizations</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="session-notes.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Session Notes</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
-    <section>
-      <h2>Details</h2>
-      <ul>
-        <li><strong>Played by:</strong> Will</li>
-        <li><strong>Species:</strong> Tiefling</li>
+  <!-- ================= END HEADER ================= -->
+
+  <!-- =============== BEGIN MAIN CONTENT =============== -->
+  <main class="character-main" style="margin: 10rem auto 1.5rem auto; max-width: 900px; min-height: 40px; flex: 1 0 auto;">
+
+    <!-- =============== BEGIN CHARACTER IMAGE =============== -->
+  <img src="../assets/images/Feren-Dax.png" alt="Feren Dax" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
+  <!-- =============== END CHARACTER IMAGE =============== -->
+
+    <!-- =============== BEGIN DETAILS SECTION =============== -->
+    
+    <section style="background:rgba(255,255,255,0.92); border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.10); padding:0.5em 0.7em; margin-top:0; margin-bottom:1.2em; width:620px; height:205px; float:left; overflow:auto;">
+      <h2 style="margin-top:0.1em; margin-bottom:0.3em; color:#b22222; font-size:1em; text-shadow:1px 1px 6px #e4e1ff, 0 2px 8px #b22222;">Details</h2>
+      <ul style="margin-top:0.1em; margin-bottom:0.3em; padding-left:1em; font-size:0.92em; line-height:1.18;">
+        <li><strong>Played by:</strong> Will &nbsp; <strong>Species:</strong> Tiefling</li>
         <li><strong>Class & Level:</strong> Warlock 7 (Hexblade) / Fighter 3 — Level 10</li>
-        <li><strong>Background:</strong> Criminal</li>
-        <li><strong>Alignment:</strong> Chaotic Good</li>
+        <li><strong>Background:</strong> Criminal &nbsp; <strong>Alignment:</strong> Chaotic Good</li>
         <li><strong>Patron:</strong> <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a></li>
-        <li><strong>HP:</strong> [Not listed] &nbsp; <strong>AC:</strong> [Not listed] &nbsp; <strong>Initiative:</strong> [Not listed] &nbsp; <strong>Inspiration:</strong> [Not listed]</li>
-        <li><strong>Coins:</strong> [Not listed]</li>
+        <li style="font-size:0.91em;">(Charming, elegant, conflicted about legacy and home. Party negotiator and magical expert.)</li>
+        <li><strong>HP:</strong> 85 &nbsp; <strong>AC:</strong> 17 &nbsp; <strong>Init:</strong> +3 &nbsp; <strong>Insp:</strong> 1</li>
         <li><a href="feren-dax-sheet.html" class="sheet-link">View Feren Dax's Character Sheet</a></li>
       </ul>
     </section>
+  <!-- =============== END DETAILS SECTION =============== -->
+  <div style="clear: both;"></div>
+   
     <section>
-      <h2>Ability Scores & Saving Throws</h2>
-      <ul>
-        <li><strong>STR:</strong> 12 (+1), Save: +1</li>
-        <li><strong>DEX:</strong> 18 (+4), Save: +4</li>
-        <li><strong>CON:</strong> 14 (+2), Save: +2</li>
-        <li><strong>INT:</strong> 16 (+3), Save: +3</li>
-        <li><strong>WIS:</strong> 16 (+3), Save: +7</li>
-        <li><strong>CHA:</strong> 25 (+7), Save: +11</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Class Breakdown</h2>
-      <ul>
+  <h2>Class Breakdown</h2>
+  <ul class="character-details-list">
         <li><strong>Warlock 7</strong> (Hexblade, Spellcasting: Charisma, Hit Die: 1d8, Cantrips: 3, Spells Known: 8)</li>
         <li><strong>Fighter 3</strong> (Eldritch Knight, Spellcasting: Intelligence, Hit Die: 1d10)</li>
       </ul>
     </section>
+    <!-- =============== END CLASS BREAKDOWN SECTION =============== -->
+  </section>
     <section>
       <h2>Backstory</h2>
       <p>Feren Dax is a Tiefling Hexblade Warlock of <a href="https://forgottenrealms.fandom.com/wiki/Alobal_Lorfiril" target="_blank">Alobal</a>, born in Yusaf'hed, the city of pride and pleasure. Raised in the Silken Phoenix, a palace-brothel managed by his mother Velistra Dax, Feren received rigorous training in etiquette, swordplay, and politics. His best friend and sparring partner is Torri Spellguard. Feren's true magical calling awakened alone, outside the influence of the Phoenix, through the mysterious deity Alobal. He leaves Yusaf'hed as an adult, returning annually for brief visits. Feren presents as charming and elegant but is internally conflicted about his legacy and home. Birthday: Mirtul 8th.</p>
     </section>
+    <!-- =============== END BACKSTORY SECTION =============== -->
     <section>
       <h2>Companions</h2>
       <h3>Magical Companion: Mika</h3>
@@ -71,6 +95,7 @@
         <li>If Mika is reduced to 0 hit points: She disappears until after a long rest.</li>
       </ul>
     </section>
+    <!-- =============== END COMPANIONS SECTION =============== -->
     <section>
       <h2>Family & Key Relationships</h2>
       <ul>
@@ -80,6 +105,7 @@
         <li><strong>Cyndara Crossfire (ex-girlfriend):</strong> Friend and ally</li>
       </ul>
     </section>
+    <!-- =============== END FAMILY & KEY RELATIONSHIPS SECTION =============== -->
     <section>
       <h2>Party Relationships & Mentions</h2>
       <ul>
@@ -95,6 +121,7 @@
         </li>
       </ul>
     </section>
+    <!-- =============== END PARTY RELATIONSHIPS & MENTIONS SECTION =============== -->
     <section>
       <h2>Notable Abilities & Features</h2>
       <ul>
@@ -104,6 +131,7 @@
         <li>Streetwise and resourceful</li>
       </ul>
     </section>
+    <!-- =============== END NOTABLE ABILITIES & FEATURES SECTION =============== -->
     <section>
       <h2>Skills & Proficiencies</h2>
       <ul>
@@ -111,6 +139,7 @@
         <li>Martial prowess from Fighter training</li>
       </ul>
     </section>
+    <!-- =============== END SKILLS & PROFICIENCIES SECTION =============== -->
     <section>
       <h2>Equipment</h2>
       <ul>
@@ -119,6 +148,7 @@
         <li>Eldritch magic from Warlock pact</li>
       </ul>
     </section>
+    <!-- =============== END EQUIPMENT SECTION =============== -->
     <section>
       <h2>Features & Traits</h2>
       <ul>
@@ -128,6 +158,7 @@
         <li>Deceptive and persuasive skills</li>
       </ul>
     </section>
+    <!-- =============== END FEATURES & TRAITS SECTION =============== -->
     <section>
       <h2>Bonds, Ideals & Flaws</h2>
       <ul>
@@ -137,6 +168,7 @@
         <li>Streetwise and resourceful</li>
       </ul>
     </section>
+    <!-- =============== END BONDS, IDEALS & FLAWS SECTION =============== -->
     <section>
       <h2>Magic Items</h2>
       <ul>
@@ -154,6 +186,7 @@
         <li><strong>Solaris' Lucky Coin:</strong> Grants one "perfect roll" (Nat 20 or max attack hit/damage). After use, becomes a regular gold coin (1gp).</li>
       </ul>
     </section>
+    <!-- =============== END MAGIC ITEMS SECTION =============== -->
     <section>
       <h2>Story Moments</h2>
       <ul>
@@ -165,6 +198,7 @@
         <li>Symbolizes Feren's self-determined path and struggles with immortality</li>
       </ul>
     </section>
+    <!-- =============== END STORY MOMENTS SECTION =============== -->
     <section>
       <h2>Setting & Lore</h2>
       <ul>
@@ -173,12 +207,14 @@
         <li><strong>The Golden City (Story from “The Golden City By The Oracle”):</strong> Exists beyond time, bathed in eternal light. Priestesses of Sun (Aurelia) and Moon (Selene) share a transcendent bond. Harmony disrupted by the arrival of Eldricus (creation/order) and Sucirdle (chaos/disorder). Represents cosmic balance and duality.</li>
       </ul>
     </section>
+    <!-- =============== END SETTING & LORE SECTION =============== -->
     <section>
       <h2>Family Tree & Lineage</h2>
       <ul>
         <li>(Details to be added)</li>
       </ul>
     </section>
+    <!-- =============== END FAMILY TREE & LINEAGE SECTION =============== -->
     <section>
       <h2>Miscellaneous</h2>
       <ul>
@@ -186,12 +222,39 @@
         <li>Feren and Torri's friendship is rooted in shared training and mutual support</li>
       </ul>
     </section>
+    <!-- =============== END MISCELLANEOUS SECTION =============== -->
   </main>
-  <footer>
-    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
-    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
-      Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
-    </p>
+  <!-- =============== END MAIN CONTENT =============== -->
+  <!-- Removed dynamic margin adjustment script for consistency with other character pages. -->
+  <!-- =============== BEGIN FOOTER SECTION =============== -->
+  <footer
+    style="
+      background: rgba(212, 21, 21, 0);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+      flex-shrink: 0;
+    "
+  >
+    <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+      <p
+        style="
+          font-size:1.1em;
+          color:#000000;
+          margin-top:-0em;
+          text-align:center;
+          text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
+          margin-bottom: 0.2em;
+        "
+      >
+        &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
+        Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
+        This is a fan site for personal use. All rights reserved.
+      </p>
+    </div>
   </footer>
+  <!-- =============== END FOOTER SECTION =============== -->
 </body>
 </html>
