--- a/html/test.html
+++ b/html/test.html
@@ -96,6 +96,7 @@
         </p>
       </div>
     </section>
+    <!-- =============== END DIVINE AND COSMIC HIERARCHY SECTION =============== -->
     <!-- Other Divine and Cosmic Figures -->
     <section>
       <div style="border: 3px solid #00FFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(224,255,255,0.10);">
@@ -124,6 +125,7 @@
         </p>
       </div>
     </section>
+    <!-- =============== END OTHER DIVINE AND COSMIC FIGURES SECTION =============== -->
     <!-- Dax Family and Associates -->
     <section>
       <div style="border: 3px solid #FFA500; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(255, 228, 181, 0.10);">
@@ -152,6 +154,7 @@
         </ul>
       </div>
     </section>
+    <!-- =============== END DAX FAMILY AND ASSOCIATES SECTION =============== -->
     <!-- Notable Shopkeepers and Wanderers -->
     <section>
       <div style="border: 3px solid #00BFFF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(173,216,230,0.10);">
@@ -168,6 +171,7 @@
         </ul>
       </div>
     </section>
+    <!-- =============== END NOTABLE SHOPKEEPERS AND WANDERERS SECTION =============== -->
   </section>
     <!-- Dragon Village NPCs -->
     <section>
@@ -221,6 +225,7 @@
         </ul>
       </div>
     </section>
+    <!-- =============== END DRAGON VILLAGE NPCS SECTION =============== -->
     <!-- Milicia Valen's Direct Family -->
     <section>
       <div style="border: 3px solid #FF00FF; border-radius: 14px; box-shadow: 0 4px 16px #0008; padding: 1.2em 1.5em; margin-bottom: 2em; background: rgba(255,192,203,0.10);">
@@ -269,6 +274,7 @@
         </ul>
       </div>
     </section>
+    <!-- =============== END MILICIA VALEN'S DIRECT FAMILY SECTION =============== -->
    
 
   <!-- ================= FOOTER ================= -->
