--- a/html/biggus-menethil.html
+++ b/html/biggus-menethil.html
@@ -6,38 +6,58 @@
   <title>Biggus Menethil</title>
   <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
-  <header>
-    <h1>Biggus Menethil</h1>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="characters.html">Characters</a></li>
-        <li><a href="important-npcs.html">Important NPCs</a></li>
-        <li><a href="locations.html">Locations</a></li>
-        <li><a href="lore-books.html">Lore Books</a></li>
-        <li><a href="house-rules.html">House Rules</a></li>
-        <li><a href="organizations.html">Organizations</a></li>
-        <li><a href="session-notes.html">Session Notes</a></li>
+<body style="min-height: 100vh; display: flex; flex-direction: column; background: url('../assets/images/CoverArt.png') no-repeat center 131px fixed; background-size: 100% 100%; background-repeat: no-repeat; background-color: #f8f8f8; margin: 0; padding: 0;">
+  <!-- ================= BEGIN HEADER ================= -->
+  <header
+    style="
+      text-align: center;
+  background: rgb(0, 0, 0);
+      border-radius: 0 0 0px 0px;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0);
+      width: 100vw;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      padding: 1rem 2rem;
+      z-index: 100;
+    "
+  >
+  <h1 style="color: #FFD700; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Biggus Menethil</h1>
+    <nav style="text-align: center; width: 100%;">
+      <ul style="display: inline-block; float: none; padding: 0; margin: 0; list-style: none;">
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="../index.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Home</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="characters.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Characters</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="important-npcs.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Important NPCs</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="locations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Locations</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="lore-books.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Lore Books</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="house-rules.html" style="color: #b22222; font-weight: bold; text-decoration: none;">House Rules</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="organizations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Organizations</a></li>
+  <li style="display: inline-block; margin: 0 0.5em;"><a href="session-notes.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Session Notes</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
-    <section>
-      <h2>Details</h2>
-      <ul>
-        <li><strong>Played by:</strong> Mike</li>
-        <li><strong>Species:</strong> Human (Variant)</li>
-        <li><strong>Class & Level:</strong> Ranger 6 (Beast Master) / Rogue 4 (Arcane Trickster) — Level 10</li>
-        <li><strong>Background:</strong> Rune Carver</li>
-        <li><strong>Alignment:</strong> Lawful Good</li>
-        <li><strong>Deity:</strong> The First One (spiritual beliefs are private, but he respects the old ways and the power of ancient runes)</li>
-        <li><strong>HP:</strong> [Not listed] &nbsp; <strong>AC:</strong> 17 &nbsp; <strong>Initiative:</strong> [Not listed] &nbsp; <strong>Inspiration:</strong> [Not listed]</li>
-        <li><strong>Coins:</strong> 134 GP, 10 SP</li>
-        <li><a href="biggus-menethil-sheet.html" class="sheet-link">View Biggus's Character Sheet</a></li>
-      </ul>
+  <!-- ================= END HEADER ================= -->
+  <main class="character-main" style="margin: 10rem auto 1.5rem auto; max-width: 900px; min-height: 40px; flex: 1 0 auto;">
+  <img src="../assets/images/Biggus.png" alt="Biggus Menethil" width="220" height="220" style="float:left; margin-right:2rem; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.2);">
+    <!-- =============== BEGIN DETAILS SECTION =============== -->
+  <section style="background:rgba(255,255,255,0.92); border-radius:10px; box-shadow:0 2px 8px rgba(0,0,0,0.10); padding:0.5em 0.7em; margin-top:0; margin-bottom:1.2em; width:620px; height:205px; float:left; overflow:auto;">
+  <h2 style="margin-top:0.1em; margin-bottom:0.3em; color:#b22222; font-size:1em; text-shadow:1px 1px 6px #e4e1ff, 0 2px 8px #b22222;">Details</h2>
+  <ul style="margin-top:0.1em; margin-bottom:0.3em; padding-left:1em; font-size:0.92em; line-height:1.18;">
+    <li><strong>Played by:</strong> Mike &nbsp; <strong>Species:</strong> Human (Variant)</li>
+    <li><strong>Class & Level:</strong> Ranger 6 (Beast Master) / Rogue 4 (Arcane Trickster) — L10</li>
+    <li><strong>Background:</strong> Rune Carver &nbsp; <strong>Alignment:</strong> Lawful Good</li>
+    <li><strong>Deity:</strong> The First One</li>
+    <li style="font-size:0.91em;">(Spiritual beliefs are private, but he respects the old ways and the power of ancient runes)</li>
+    <li><strong>HP:</strong> [Not listed] &nbsp; <strong>AC:</strong> 17 &nbsp; <strong>Init:</strong> [Not listed] &nbsp; <strong>Insp:</strong> [Not listed]</li>
+    <li><strong>Coins:</strong> 134 GP, 10 SP</li>
+    <li><a href="biggus-menethil-sheet.html" class="sheet-link">View Biggus's Character Sheet</a></li>
+  </ul>
     </section>
+    <!-- =============== END DETAILS SECTION =============== -->
+    <div style="clear: both;"></div>
+    <!-- =============== BEGIN CLASS BREAKDOWN SECTION =============== -->
     <section>
       <h2>Class Breakdown</h2>
       <ul>
@@ -45,10 +65,12 @@
         <li><strong>Rogue 4</strong> (Arcane Trickster, Spellcasting: Intelligence, Hit Die: 1d8, Cantrips: 2)</li>
       </ul>
     </section>
+    <!-- =============== END CLASS BREAKDOWN SECTION =============== -->
     <section>
       <h2>Backstory</h2>
       <p>Biggus Menethil is a resourceful and determined human, known for his keen senses and adaptability. As a Rune Carver, he has a mysterious connection to ancient magical runes, which he uses to aid his party. His dual training as a Ranger and Rogue makes him both a skilled tracker and a master of stealth. Biggus is loyal to his friends and has a strong sense of justice, though he is not above bending the rules to achieve his goals.</p>
     </section>
+    <!-- =============== END BACKSTORY SECTION =============== -->
     <section>
       <h2>Party Relationships & Mentions</h2>
       <ul>
@@ -64,6 +86,7 @@
         </li>
       </ul>
     </section>
+    <!-- =============== END PARTY RELATIONSHIPS & MENTIONS SECTION =============== -->
     <section>
       <h2>Notable Abilities & Features</h2>
       <ul>
@@ -76,12 +99,14 @@
         <li>Observant (Feat)</li>
       </ul>
     </section>
+    <!-- =============== END NOTABLE ABILITIES & FEATURES SECTION =============== -->
     <section>
       <h2>Skills & Proficiencies</h2>
       <ul>
         <li>[Skills not listed]</li>
       </ul>
     </section>
+    <!-- =============== END SKILLS & PROFICIENCIES SECTION =============== -->
     <section>
       <h2>Features & Traits</h2>
       <ul>
@@ -91,6 +116,7 @@
         <li>[Other features not listed]</li>
       </ul>
     </section>
+    <!-- =============== END FEATURES & TRAITS SECTION =============== -->
     <section>
       <h2>Bonds, Ideals & Flaws</h2>
       <ul>
@@ -99,6 +125,7 @@
         <li><strong>Flaws:</strong> [Not listed]</li>
       </ul>
     </section>
+    <!-- =============== END BONDS, IDEALS & FLAWS SECTION =============== -->
     <section>
       <h2>Story Moments</h2>
       <ul>
@@ -107,25 +134,52 @@
         <li>Negotiated a truce with a rival adventuring group</li>
       </ul>
     </section>
+    <!-- =============== END STORY MOMENTS SECTION =============== -->
     <section>
       <h2>Equipment</h2>
       <ul>
         <li>[Equipment not listed]</li>
       </ul>
     </section>
+    <!-- =============== END EQUIPMENT SECTION =============== -->
     <section>
       <h2>Family Tree & Lineage</h2>
       <ul>
         <li>(Details to be added)</li>
       </ul>
     </section>
+    <!-- =============== END FAMILY TREE & LINEAGE SECTION =============== -->
   </main>
-  <footer>
-    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
-    <p style="font-size:0.9em; color:#888; margin-top:0.5em;">
-      Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. This is a fan site for personal use. All rights reserved.
-    </p>
+  <!-- ================= BEGIN FOOTER ================= -->
+  <footer
+    style="
+      background: rgba(212, 21, 21, 0);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+      flex-shrink: 0;
+    "
+  >
+  <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+      <p
+        style="
+          font-size:1.1em;
+          color:#000000;
+          margin-top:-0em;
+          text-align:center;
+          text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
+          margin-bottom: 0.2em;
+        "
+      >
+        &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
+        Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
+        This is a fan site for personal use. All rights reserved.
+      </p>
+    </div>
   </footer>
+  <!-- ================= END FOOTER ================= -->
   <script src="../js/main.js"></script>
 </body>
 </html>
