--- a/html/locations.html
+++ b/html/locations.html
@@ -1,101 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    html, body { overflow-x: hidden; }
+    /* Add any global keyframes or utility styles here */
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Locations</title>
   <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
-  <header>
-    <h1>Locations</h1>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="characters.html">Characters</a></li>
-        <li><a href="important-npcs.html">Important NPCs</a></li>
-        <li><a href="locations.html">Locations</a></li>
-        <li><a href="lore-books.html">Lore Books</a></li>
-        <li><a href="house-rules.html">House Rules</a></li>
-        <li><a href="organizations.html">Organizations</a></li>
-        <li><a href="session-notes.html">Session Notes</a></li>
+<body style="min-height: 100vh; display: flex; flex-direction: column; background: url('../assets/images/CoverArt.png') no-repeat center 120px fixed; background-size: cover; background-repeat: no-repeat; background-color: #f8f8f8; margin: 0; padding: 0;">
+  <!-- ================= BEGIN HEADER ================= -->
+  <header
+    style="
+      text-align: center;
+      background: rgb(0, 0, 0);
+      border-radius: 0 0 0px 0px;
+      box-shadow: 0 2px 8px rgba(255, 255, 255, 0);
+      width: 100vw;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      padding: 1rem 2rem;
+      z-index: 100;
+    "
+  >
+    <h1 style="color: #FFD700; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Locations</h1>
+    <nav style="text-align: center; width: 100%;">
+      <ul style="display: inline-block; float: none; padding: 0; margin: 0; list-style: none;">
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="../index.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Home</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="characters.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Characters</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="important-npcs.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Important NPCs</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="locations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Locations</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="lore-books.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Lore Books</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="house-rules.html" style="color: #b22222; font-weight: bold; text-decoration: none;">House Rules</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="organizations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Organizations</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="session-notes.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Session Notes</a></li>
       </ul>
     </nav>
   </header>
-  <main>
+  <!-- ================= END HEADER ================= -->
+  <!-- ================= BEGIN MAIN CONTENT ================= -->
+  <main style="background: rgba(0,0,0,0); border-radius: 10px; margin: 10rem auto 1.5rem auto; max-width: 900px; min-height: 40px; padding: 1rem 2rem; flex: 1 0 auto;">
     <section>
-      <h2>World & Setting Overview</h2>
-      <p>This page lists all major campaign locations in chronological order, as they appear in the campaign timeline. Each location includes a brief description and its role in the story.</p>
-      <ol>
-        <li>
-          <strong>The Golden City (Pocket Dimension):</strong> The original sanctuary created by Tsuki, home to Aurelia and Selene. Site of the first rebellion and the ejection of the gods into the wider cosmos.
-        </li>
-        <li>
-          <strong>The Wider Cosmos / Mortal Realms:</strong> Where the ejected denizens of the Golden City become gods of the mortal worlds.
-        </li>
-        <li>
-          <strong>The Pocket Dimension (Eldricus's Exile):</strong> Eldricus's place of refuge after the Great Battle against the Twelve Rebellious Gods led by Sucirdle, and the site of Seraphia's creation. Time flows differently here.
-        </li>
-        <li>
-          <strong>Seraphia (New World):</strong> The world created by Eldricus as a reimagined Golden City, home to mortals and immortals unaware of their true origins.
-        </li>
-        <li>
-          <strong>Mogo:</strong> A key early campaign location. Site of the well, the guardian horse Epona, and the first library outpost established with the players' involvement. Also the place where Pete dies and Rowan gains immortality.
-        </li>
-        <li>
-          <strong>Tolucaville (Mician Village):</strong> Village of the Mician, where Biggus gains immortality and Yo has a notorious dislike for the locals.
-        </li>
-        <li>
-          <strong>Dragon Village of Westeros:</strong> Home of Ziggy and his family, and the site of several party side quests.
-        </li>
-        <li>
-          <strong>The Loom of Souls:</strong> A mysterious realm where the party meets Feren Dax and frees Tsuki. Major story arc location.
-        </li>
-        <li>
-          <strong>Library Outpost (in Mogo):</strong> The party's base of operations, constructed after finding a suitable location in Mogo.
-        </li>
-        <li>
-          <strong>School in the Pocket Dimension:</strong> Place of study and rest for the party between adventures.
-        </li>
-        <li>
-          <strong>Top of the World (Portal):</strong> The highest point, containing a portal used by the party to travel to Feren Dax's hometown.
-        </li>
-        <li>
-          <strong>Wastelands/Desert:</strong> The harsh region the party crosses on their journey to Yusaf'hed.
-        </li>
-        <li>
-          <strong>Yusaf'hed (Feren Dax's Hometown):</strong> The city of pride and pleasure, home to the Silken Phoenix. Central to Feren Dax's story.
-        </li>
-        <li>
-          <strong>Palace = Sol, Temple = Luna:</strong> The homes of the Aurelia (Sol) and Selene (Luna), originally from the Golden City. These sacred sites in The Golden City represent the legacy and power of Aurelia (Sun) and Selene (Moon), and are central to the city's spiritual life.
-        </li>
-        <li>
-          <strong>The World (Post-Pocket Dimension):</strong> The changed world after the shattering of the pocket dimension, with new settlements and a new era for Milicia's people.
-        </li>
-      </ol>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 D&D Campaign Reference &mdash; Ruleset: D&D 5e (2014 version)</p>
-    <section style="max-width:700px; margin:2rem auto;">
-      <h3 style="text-align:center; color: #ff0000; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Quick Links</h3>
-      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; max-width:600px; margin:0 auto;">
-        <a class="character-card" href="characters.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#0000006e;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Characters</a>
-        <a class="character-card" href="important-npcs.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000082;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Important NPCs</a>
-        <a class="character-card" href="locations.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000083;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Locations</a>
-        <a class="character-card" href="lore-books.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#0000007f;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Lore Books</a>
-        <a class="character-card" href="house-rules.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000080;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">House Rules</a>
-        <a class="character-card" href="organizations.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000080;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Organizations</a>
-        <a class="character-card" href="session-notes.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000071; text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Session Notes</a>
+      <div class="overview-heading">
+        <svg class="icon" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" stroke="#b22222" stroke-width="2" fill="#fffbe8" /><path d="M4 12a8 8 0 0 1 16 0" stroke="#b22222" stroke-width="2" fill="none"/><path d="M12 4a8 8 0 0 1 0 16" stroke="#b22222" stroke-width="2" fill="none"/></svg>
+        World &amp; <span style="color:gold;">Setting Overview</span>
+      </div>
+      <div class="overview-callout">
+        This page lists all major campaign locations in chronological order, as they appear in the campaign timeline. Each location includes a brief description and its role in the story.
+      </div>
+      <div class="location-list">
+        <div class="location-card">
+          <h3>The Golden City (Pocket Dimension)</h3>
+          <p>The original sanctuary created by Tsuki, home to Aurelia and Selene. Site of the first rebellion and the ejection of the gods into the wider cosmos.</p>
+        </div>
+        <div class="location-card">
+          <h3>The Wider Cosmos / Mortal Realms</h3>
+          <p>Where the ejected denizens of the Golden City become gods of the mortal worlds.</p>
+        </div>
+        <div class="location-card">
+          <h3>The Pocket Dimension (Eldricus's Exile)</h3>
+          <p>Eldricus's place of refuge after the Great Battle against the Twelve Rebellious Gods led by Sucirdle, and the site of Seraphia's creation. Time flows differently here.</p>
+        </div>
+        <div class="location-card">
+          <h3>Seraphia (New World)</h3>
+          <p>The world created by Eldricus as a reimagined Golden City, home to mortals and immortals unaware of their true origins.</p>
+        </div>
+        <div class="location-card">
+          <h3>Mogo</h3>
+          <p>A key early campaign location. Site of the well, the guardian horse Epona, and the first library outpost established with the players' involvement. Also the place where Pete dies and Rowan gains immortality.</p>
+        </div>
+        <div class="location-card">
+          <h3>Tolucaville (Mician Village)</h3>
+          <p>Village of the Mician, where Biggus gains immortality and Yo has a notorious dislike for the locals.</p>
+        </div>
+        <div class="location-card">
+          <h3>Dragon Village of Westeros</h3>
+          <p>Home of Ziggy and his family, and the site of several party side quests.</p>
+        </div>
+        <div class="location-card">
+          <h3>The Loom of Souls</h3>
+          <p>A mysterious realm where the party meets Feren Dax and frees Tsuki. Major story arc location.</p>
+        </div>
+        <div class="location-card">
+          <h3>Library Outpost (in Mogo)</h3>
+          <p>The party's base of operations, constructed after finding a suitable location in Mogo.</p>
+        </div>
+        <div class="location-card">
+          <h3>School in the Pocket Dimension</h3>
+          <p>Place of study and rest for the party between adventures.</p>
+        </div>
+        <div class="location-card">
+          <h3>Top of the World (Portal)</h3>
+          <p>The highest point, containing a portal used by the party to travel to Feren Dax's hometown.</p>
+        </div>
+        <div class="location-card">
+          <h3>Wastelands/Desert</h3>
+          <p>The harsh region the party crosses on their journey to Yusaf'hed.</p>
+        </div>
+        <div class="location-card">
+          <h3>Yusaf'hed (Feren Dax's Hometown)</h3>
+          <p>The city of pride and pleasure, home to the Silken Phoenix. Central to Feren Dax's story.</p>
+        </div>
+        <div class="location-card">
+          <h3>Palace = Sol, Temple = Luna</h3>
+          <p>The homes of the Aurelia (Sol) and Selene (Luna), originally from the Golden City. These sacred sites in The Golden City represent the legacy and power of Aurelia (Sun) and Selene (Moon), and are central to the city's spiritual life.</p>
+        </div>
+        <div class="location-card">
+          <h3>The World (Post-Pocket Dimension)</h3>
+          <p>The changed world after the shattering of the pocket dimension, with new settlements and a new era for Milicia's people.</p>
+        </div>
       </div>
     </section>
-    <footer>
-      <p style="font-size:1.1em; color:#b22222; margin-top:-1em; text-align:center; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">
-        &copy; 2025 D&D Campaign Reference; Ruleset: D&D 5e (2014 version)<br>
-        Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. <br>
-        This is a fan site for personal use. All rights reserved.
-      </p>
+  </main>
+  <!-- ================= END MAIN CONTENT ================= -->
+     
+    <!-- ================= BEGIN FOOTER ================= -->
+    <footer
+      style="
+        background: rgba(212, 21, 21, 0);
+        border-radius: 10px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
+        margin: 1.5rem auto;
+        max-width: 900px;
+        padding: 1rem 2rem;
+        flex-shrink: 0;
+      "
+    >
+      <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+        <p
+          style="
+            font-size:1.1em;
+            color:#000000;
+            margin-top:-0em;
+            text-align:center;
+            text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
+            margin-bottom: 0.2em;
+          "
+        >
+          &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
+          Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
+          This is a fan site for personal use. All rights reserved.
+        </p>
+      </div>
     </footer>
+    <!-- ================= END FOOTER ================= -->
   <script src="../js/main.js"></script>
 </body>
 </html>
