--- a/html/lore-books.html
+++ b/html/lore-books.html
@@ -1,52 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    html, body { overflow-x: hidden; }
+    /* Add any global keyframes or utility styles here */
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lore Books</title>
   <link rel="stylesheet" href="../css/main.css">
 </head>
-<body>
-  <header>
-    <h1>Lore Books</h1>
-    <nav>
-      <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="characters.html">Characters</a></li>
-        <li><a href="important-npcs.html">Important NPCs</a></li>
-        <li><a href="locations.html">Locations</a></li>
-        <li><a href="lore-books.html">Lore Books</a></li>
-        <li><a href="house-rules.html">House Rules</a></li>
-        <li><a href="organizations.html">Organizations</a></li>
-        <li><a href="session-notes.html">Session Notes</a></li>
+<body style="min-height: 100vh; display: flex; flex-direction: column; background: url('../assets/images/CoverArt.png') no-repeat center 120px fixed; background-size: cover; background-repeat: no-repeat; background-color: #f8f8f8; margin: 0; padding: 0;">
+  <!-- ================= BEGIN HEADER ================= -->
+  <header
+    style="
+      text-align: center;
+      background: rgb(0, 0, 0);
+      border-radius: 0 0 0px 0px;
+      box-shadow: 0 2px 8px rgba(255, 255, 255, 0);
+      width: 100vw;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      padding: 1rem 2rem;
+      z-index: 1000;
+    "
+  >
+    <h1 style="color: #FFD700; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Lore Books</h1>
+    <nav style="text-align: center; width: 100%;">
+      <ul style="display: inline-block; float: none; padding: 0; margin: 0; list-style: none;">
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="../index.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Home</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="characters.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Characters</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="important-npcs.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Important NPCs</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="locations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Locations</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="lore-books.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Lore Books</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="house-rules.html" style="color: #b22222; font-weight: bold; text-decoration: none;">House Rules</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="organizations.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Organizations</a></li>
+        <li style="display: inline-block; margin: 0 0.5em;"><a href="session-notes.html" style="color: #b22222; font-weight: bold; text-decoration: none;">Session Notes</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <section>
-      <h2>In-Game Books & Stories</h2>
-      <!-- Lore book content will go here -->
-    </section>
+  <!-- ================= END HEADER ================= -->
+  <!-- ================= BEGIN MAIN CONTENT ================= -->
+  <main
+    style="background: rgba(0,0,0,0); border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); margin: 4.5rem auto 1.5rem auto; max-width: 900px; padding: 1rem 2rem; flex: 1 0 auto;"
+  >
+    <h2>In-Game Books & Stories</h2>
+    <!-- Lore book content will go here -->
+    <!-- ================= BEGIN IN-GAME BOOKS & STORIES SECTION ================= -->
+    <h2>In-Game Books & Stories</h2>
+    <!-- Lore book content will go here -->
+    <!-- ================= END IN-GAME BOOKS & STORIES SECTION ================= -->
   </main>
-  <section style="max-width:700px; margin:2rem auto;">
-    <h3 style="text-align:center; color: #ff0000; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">Quick Links</h3>
-    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; max-width:600px; margin:0 auto;">
-      <a class="character-card" href="characters.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#0000006e;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Characters</a>
-      <a class="character-card" href="important-npcs.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000082;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Important NPCs</a>
-      <a class="character-card" href="locations.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000083;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Locations</a>
-      <a class="character-card" href="lore-books.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#0000007f;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Lore Books</a>
-      <a class="character-card" href="house-rules.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000080;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">House Rules</a>
-      <a class="character-card" href="organizations.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000080;text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Organizations</a>
-      <a class="character-card" href="session-notes.html" style="flex: 0 1 calc(20% - 1rem); min-width:120px; text-align:center; display:flex; align-items:center; justify-content:center; color:#ff0000; background:#00000071; text-shadow:2px 2px 8px #000000, 0 2px 8px #000000;">Session Notes</a>
+  <!-- ================= END MAIN CONTENT ================= -->  
+
+  <!-- ================= BEGIN FOOTER ================= -->
+  <footer
+    style="
+      background: rgba(212, 21, 21, 0);
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0);
+      margin: 1.5rem auto;
+      max-width: 900px;
+      padding: 1rem 2rem;
+      flex-shrink: 0;
+    "
+  >
+    <div style="border: 2px solid #888; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.136); padding: 1em 1.5em; margin: 1.5em auto 0 auto; max-width: auto; background: rgba(240,240,240,0.15);">
+      <p
+        style="
+          font-size:1.1em;
+          color:#000000;
+          margin-top:-0em;
+          text-align:center;
+          text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;
+          margin-bottom: 0.2em;
+        "
+      >
+        &copy; 2025 D&amp;D Campaign Reference; Ruleset: D&amp;D 5e (2014 version)<br>
+        Dungeons &amp; Dragons and all related trademarks are property of Wizards of the Coast LLC.<br>
+        This is a fan site for personal use. All rights reserved.
+      </p>
     </div>
-  </section>
-  <footer>
-    <p style="font-size:1.1em; color:#b22222; margin-top:-1em; text-align:center; text-shadow: 2px 2px 8px #000000, 0 2px 8px #000000;">
-      &copy; 2025 D&D Campaign Reference; Ruleset: D&D 5e (2014 version)<br>
-      Dungeons & Dragons and all related trademarks are property of Wizards of the Coast LLC. <br>
-      This is a fan site for personal use. All rights reserved.
-    </p>
   </footer>
+  <!-- ================= END FOOTER ================= -->
   <script src="../js/main.js"></script>
 </body>
 </html>
